// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds neither extra class when just alternate property is true 1`] = `
<li
  class="ListItem"
>
  <div>
    <span
      class="ListItem-Child"
    >
      asdf
    </span>
  </div>
</li>
`;

exports[`adds the active class when active property is true 1`] = `
<li
  class="ListItem active"
>
  <div>
    <span
      class="ListItem-Child"
    >
      asdf
    </span>
  </div>
</li>
`;

exports[`adds the alternate class when active and alternate properties are true 1`] = `
<li
  class="ListItem alternate"
>
  <div>
    <span
      class="ListItem-Child"
    >
      asdf
    </span>
  </div>
</li>
`;

exports[`renders the child I pass 1`] = `
<li
  class="ListItem"
>
  <div>
    <span
      class="ListItem-Child"
    >
      asdf
    </span>
  </div>
</li>
`;

exports[`renders without crashing 1`] = `
<li
  class="ListItem"
>
  <div>
    <span
      class="ListItem-Child"
    >
      asdf
    </span>
  </div>
</li>
`;

exports[`shows remove button when hovered 1`] = `
<ListItem
  remove={[Function]}
>
  <li
    className="ListItem"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div>
      <span
        className="ListItem-Child"
        onClick={[Function]}
      >
        asdf
      </span>
    </div>
    <span
      className="ListItem-Remove"
    >
      <RemoveButton
        onClick={[Function]}
      >
        <button
          className="Remove-Button"
          onClick={[Function]}
        >
          <img
            alt="remove"
            className="redx"
            src="../public/img/red-x.svg"
          />
        </button>
      </RemoveButton>
    </span>
  </li>
</ListItem>
`;

exports[`shows the badge when alert is set 1`] = `
<li
  class="ListItem active"
>
  <div>
    <div
      class="alert"
    >
      
    </div>
    <span
      class="ListItem-Child"
    >
      asdf
    </span>
  </div>
</li>
`;
